POKE-1 delete static pokemon array design improvements, no scrollbar when popup ist open, change mini pokemone to close btn for popup filterpokemon bugfix

--- a/style.css
+++ b/style.css
@@ -85,18 +85,19 @@ body {
 }
 
 img.pokemon-mobile-close {
-  display: none;
+  cursor: pointer;
 }
 
 img.pokemon-mobile-image {
   display: block;
-  width: 90px;
+  width: 40px;
   height: auto;
 }
 
 .desktop-hide {
   display: none;
 }
+
 .logo-wrapper {
   display: flex;
   position: relative;
@@ -374,7 +375,7 @@ h1 {
 }
 
 .pokemon-image-little img {
-  width: 90px;
+  width: 50px;
   height: auto;
 }
 .pokemon-image {
@@ -502,13 +503,7 @@ h1 {
     top: -12px;
   }
 
-  .pokemon-image-little img {
-    display: none;
-  }
-  img.pokemon-mobile-close {
-    display: block;
-  }
-
+ 
   .pokemon-image-little img {
     width: 40px;
     height: auto;
